# CodeLens_MCP

./: .env.example  .gitignore  README.md  analytics.py  pyproject.toml
src/codelens/: chunker.py  embeddings.py  indexer.py  observability.py  server.py  store.py
tests/: eval_harness.py  test_chunker.py  test_server.py
