[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens-mcp"
version = "0.1.0"
description = "A repo-aware MCP server for semantic codebase search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "tree-sitter-languages",
    "google-genai",
    "sqlite-vec",
    "click",
    "rich"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
codelens = "codelens.indexer:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
